adding base js. wip

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
 
             <div class="col-md-12 text-center pt-2">
                 <button type="button" class="btn btn-info">
-                    Random Number <span class="badge badge-light">9</span>
+                    Random Number <span id="random-number" class="badge badge-light">9</span>
                 </button>
                 <button type="button" class="btn btn-success">
-                    Wins <span class="badge badge-light">9</span>
+                    Wins <span id="total-wins" class="badge badge-light">9</span>
                 </button>
                 <button type="button" class="btn btn-danger">
-                    Losses <span class="badge badge-light">9</span>
+                    Losses <span id="total-losses" class="badge badge-light">9</span>
                 </button>
             </div>
 
             <div class="col-md-12 text-center total-score mt-5">
-                <h2> Total Score <span class="badge badge-primary">89</span></h2>
+                <h2> Total Score <span id="total-score" class="badge badge-primary">89</span></h2>
             </div>
 
             
@@ -71,5 +71,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="assets/javascript/game.js"></script>
   </body>
 </html>
