make crystal values unique

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
             
             <div class="col-md-12 text-center mt-5">
-                <img class="jewel jewel-random jewel-blue rounded border border-danger" src="assets/images/blue_jewel.png" alt="blue jewel" class="img-thumbnail">  
-                <img class="jewel jewel-random jewel-red rounded border border-primary" src="assets/images/red_jewel.png" alt="blue jewel" class="img-thumbnail">  
-                <img class="jewel jewel-random jewel-purple rounded border border-success" src="assets/images/purple_jewel.png" alt="blue jewel" class="img-thumbnail">  
-                <img class="jewel jewel-random jewel-green rounded border border-warning" src="assets/images/green_jewel.png" alt="blue jewel" class="img-thumbnail">        
+                <img id="jewel-blue" class="jewel rounded border border-danger" src="assets/images/blue_jewel.png" alt="blue jewel" class="img-thumbnail">  
+                <img id="jewel-red" class="jewel rounded border border-primary" src="assets/images/red_jewel.png" alt="blue jewel" class="img-thumbnail">  
+                <img id="jewel-purple" class="jewel rounded border border-success" src="assets/images/purple_jewel.png" alt="blue jewel" class="img-thumbnail">  
+                <img id="jewel-green" class="jewel rounded border border-warning" src="assets/images/green_jewel.png" alt="blue jewel" class="img-thumbnail">        
             </div>
         </div>
     </div>
@@ -71,6 +71,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/game.js"></script>
   </body>
 </html>
