cleanup and added some todos

--- a/index.html
+++ b/index.html
@@ -75,3 +75,5 @@
     <script src="assets/javascript/game.js"></script>
   </body>
 </html>
+
+<!-- todo: change crystals for ones that aren't ugly AF, fix UI, add to portfolio -->
