add better images for crystals, add attribution

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       .border {
         border-width: 3px !important;
       }
+      .attribution {
+        font-size: 10px;
+      }
     </style>
 
   </head>
@@ -62,9 +65,10 @@
                 <img id="jewel-purple" class="jewel rounded border border-success" src="assets/images/purple_jewel.png" alt="blue jewel" class="img-thumbnail">  
                 <img id="jewel-green" class="jewel rounded border border-warning" src="assets/images/green_jewel.png" alt="blue jewel" class="img-thumbnail">        
             </div>
+
+            <div class="attribution"><p>Images are from <a rel="nofollow" href="https://www.Vecteezy.com">Vecteezy</a></p></div>
         </div>
     </div>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -76,4 +80,4 @@
   </body>
 </html>
 
-<!-- todo: change crystals for ones that aren't ugly AF, fix UI, add to portfolio -->
+<!-- todo: fix UI, add to portfolio -->
