--- a/index.html
+++ b/index.html
@@ -4,62 +4,87 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!-- Reset CSS -->
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />  
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <!-- My CSS -->
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <title>Unit-4-Game</title>
-
-     <!-- Testing styles -->
-    <style>
-      img { 
-        height: 120px;
-        margin: 10px;
-      }
-
-      .border {
-        border-width: 3px !important;
-      }
-      .attribution {
-        font-size: 10px;
-      }
-    </style>
-
   </head>
   <body>
     <div class="container">
-        <div class="row-fluid">
+        <div class="row-fluid text-center">
             <div class="jumbotron mt-3">
-              <h1>Crystal Collector</h1>
-              <p>Hello, traveller. The game is simple. You are given a random number at the start of the game. 
-                Your aim is to match your total score to that random number by clicking on the crystals!
-              </p>
-              <p>
-                There are 4 crystals below. By clicking on one, you add a specific amount of points to your total score.
-                You win the game by matching your total score to the random number; you lose the game if you go above it.
-                The value of each crystal is hidden from you up until you clik on it.
-                Each time the game starts, the values associated with each crystal change.
-              </p>               
+              <h1>Crystal Collector</h1>              
             </div>
 
-            <div class="col-md-12 text-center pt-2">
+            <div class="accordion" id="accordionExample">
+              <div class="card">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      The Gist of Things
+                    </button>
+                  </h5>
+                </div>
+            
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <div class="card-body">
+                    Hello, traveller. The game is simple. You are given a random number at the start of the game. Your aim is to match your total score to that random number by clicking on the crystals!
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header" id="headingTwo">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Instructions
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                  <div class="card-body">
+                    There are 4 crystals below. By clicking on one, you add a specific amount of points to your total score. The value of each crystal is hidden from you up until you clik on it. You win the game by matching your total score to the random number; you lose the game if you go above it. Each time the game starts, the values associated with each crystal change.
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row mt-3">
+                <div class="col-md-4">
+                    <div class="col-md-12 text-center pt-2">
+                        <button type="button" class="btn btn-success">
+                            Wins <span id="total-wins" class="badge badge-light">9</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center pt-2">
+                    <button type="button" class="btn btn-primary">
+                        Random Number <span id="random-number" class="badge badge-light">9</span>
+                    </button>
+                </div>
+                <div class="col-md-4">
+                    <div class="col-md-12 text-center pt-2">
+                        <button type="button" class="btn btn-danger">
+                            Losses <span id="total-losses" class="badge badge-light">9</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-12 text-center pt-3">
                 <button type="button" class="btn btn-info">
-                    Random Number <span id="random-number" class="badge badge-light">9</span>
-                </button>
-                <button type="button" class="btn btn-success">
-                    Wins <span id="total-wins" class="badge badge-light">9</span>
-                </button>
-                <button type="button" class="btn btn-danger">
-                    Losses <span id="total-losses" class="badge badge-light">9</span>
+                    Total Score <span id="total-score" class="badge badge-light">9</span>
                 </button>
             </div>
 
-            <div class="col-md-12 text-center total-score mt-5">
+            <!-- <div class="col-md-12 text-center total-score mt-5">
                 <h2> Total Score <span id="total-score" class="badge badge-primary">89</span></h2>
-            </div>
+            </div> -->
 
             
-            <div class="col-md-12 text-center mt-5">
+            <div class="col-md-12 text-center mt-3">
                 <img id="jewel-blue" class="jewel rounded border border-danger" src="assets/images/blue_jewel.png" alt="blue jewel" class="img-thumbnail">  
                 <img id="jewel-red" class="jewel rounded border border-primary" src="assets/images/red_jewel.png" alt="blue jewel" class="img-thumbnail">  
                 <img id="jewel-purple" class="jewel rounded border border-success" src="assets/images/purple_jewel.png" alt="blue jewel" class="img-thumbnail">  
