add styling the jewel buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row-fluid text-center">
             <div class="jumbotron mt-3">
-              <h1>Crystal Collector</h1>              
+              <h1 class="display-3">Crystal Collector</h1>          
             </div>
 
             <div class="accordion" id="accordionExample">
@@ -79,11 +79,6 @@
                 </button>
             </div>
 
-            <!-- <div class="col-md-12 text-center total-score mt-5">
-                <h2> Total Score <span id="total-score" class="badge badge-primary">89</span></h2>
-            </div> -->
-
-            
             <div class="col-md-12 text-center mt-3">
                 <img id="jewel-blue" class="jewel rounded border border-danger" src="assets/images/blue_jewel.png" alt="blue jewel" class="img-thumbnail">  
                 <img id="jewel-red" class="jewel rounded border border-primary" src="assets/images/red_jewel.png" alt="blue jewel" class="img-thumbnail">  
@@ -91,18 +86,19 @@
                 <img id="jewel-green" class="jewel rounded border border-warning" src="assets/images/green_jewel.png" alt="blue jewel" class="img-thumbnail">        
             </div>
 
-            <div class="attribution"><p>Images are from <a rel="nofollow" href="https://www.Vecteezy.com">Vecteezy</a></p></div>
+            <div class="col-md-12 text-center mt-2">
+                <p class="attribution">Images are from <a rel="nofollow" href="https://www.Vecteezy.com">Vecteezy</a></p>
+            </div>
+
         </div>
     </div>
 
-    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Game JS -->
     <script src="assets/javascript/game.js"></script>
   </body>
 </html>
-
-<!-- todo: fix UI, add to portfolio -->
