style change for jumbotron, random number and total score

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 text-center pt-2">
-                    <button type="button" class="btn btn-primary">
+                    <button type="button" class="btn btn-warning">
                         Random Number <span id="random-number" class="badge badge-light">9</span>
                     </button>
                 </div>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="col-md-12 text-center pt-3">
-                <button type="button" class="btn btn-info">
+                <button type="button" class="btn btn-primary btn-lg">
                     Total Score <span id="total-score" class="badge badge-light">9</span>
                 </button>
             </div>
