--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
         <div class="row-fluid text-center">
-            <div class="jumbotron mt-3">
+            <div class="jumbotron mt-3 title">
               <h1 class="display-3">Crystal Collector</h1>          
             </div>
 
